src/components/About.css
#about__title {
  text-align: center;
  padding: 75px 0 75px 0;
}

#about__container {
  width: 100%;
}

#headshot {
  width: 175px;
  height: 230px;
}

#skills__row {
  margin-top: 100px;
}

#skills__table__col {
  margin-top: 20px;
  margin-left: 20px;
}

p {
  color: inherit !important;
}

@media only screen and (max-width: 600px) {
  #skills__table__col {
    margin-top: 100px;
  }
}

